Fix wrong font on user search bar

--- a/static/common.css
+++ b/static/common.css
@@ -180,7 +180,7 @@ body { background: #141414; color: white; font-family: Arial, Helvetica, sans-se
     border: 1px solid black;
     color: white;
     margin: 0 0 0 20px;
-    font-family: Arial Italic, Italic;
+    font-style: italic;
     padding: 4px;
     width: 150px;
     font-size: 12px;
